# medallion-bench

./: README.md  pyproject.toml
src/inspect_ai/: __init__.py  dataset.py  model.py  scorer.py  solver.py  tool.py
src/medallion_bench/: __init__.py  agents.py  dataset.py  medallion_bench.py  scorer.py  scoring.py  solver.py  tools.py
tests/: __init__.py  conftest.py  test_dataset.py  test_medallion_bench.py  test_scoring.py
